[gd_scene load_steps=5 format=4 uid="uid://jwbatjrd1wl2"]

[ext_resource type="Texture2D" uid="uid://7b5e3bxgdnba" path="res://assets/textures/Tiles.png" id="1_1j1cm"]
[ext_resource type="Script" path="res://nodes/TileMap-GameOfLife.gd" id="2_324br"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ystq5"]
texture = ExtResource("1_1j1cm")
texture_region_size = Vector2i(1, 1)
0:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_bdnrh"]
tile_size = Vector2i(1, 1)
sources/0 = SubResource("TileSetAtlasSource_ystq5")

[node name="GameOfLifeManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -361.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_324br")

[node name="Field" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Map" type="TileMapLayer" parent="Field"]
tile_map_data = PackedByteArray("AAD/////AAABAAAAAAD//yAAAAABAAAAAAAAAP//AAABAAAAAAAAACAAAAABAAAAAAABAP//AAABAAAAAAABACAAAAABAAAAAAACAP//AAABAAAAAAACACAAAAABAAAAAAADAP//AAABAAAAAAADACAAAAABAAAAAAAEAP//AAABAAAAAAAEACAAAAABAAAAAAAFAP//AAABAAAAAAAFACAAAAABAAAAAAAGAP//AAABAAAAAAAGACAAAAABAAAAAAAHAP//AAABAAAAAAAHACAAAAABAAAAAAAIAP//AAABAAAAAAAIACAAAAABAAAAAAAJAP//AAABAAAAAAAJACAAAAABAAAAAAAKAP//AAABAAAAAAAKACAAAAABAAAAAAALAP//AAABAAAAAAALACAAAAABAAAAAAAMAP//AAABAAAAAAAMACAAAAABAAAAAAANAP//AAABAAAAAAANACAAAAABAAAAAAAOAP//AAABAAAAAAAOACAAAAABAAAAAAAPAP//AAABAAAAAAAPACAAAAABAAAAAAAQAP//AAABAAAAAAAQACAAAAABAAAAAAARAP//AAABAAAAAAARACAAAAABAAAAAAASAP//AAABAAAAAAASACAAAAABAAAAAAATAP//AAABAAAAAAATACAAAAABAAAAAAAUAP//AAABAAAAAAAUACAAAAABAAAAAAAVAP//AAABAAAAAAAVACAAAAABAAAAAAAWAP//AAABAAAAAAAWACAAAAABAAAAAAAXAP//AAABAAAAAAAXACAAAAABAAAAAAAYAP//AAABAAAAAAAYACAAAAABAAAAAAAZAP//AAABAAAAAAAZACAAAAABAAAAAAAaAP//AAABAAAAAAAaACAAAAABAAAAAAAbAP//AAABAAAAAAAbACAAAAABAAAAAAAcAP//AAABAAAAAAAcACAAAAABAAAAAAAdAP//AAABAAAAAAAdACAAAAABAAAAAAAeAP//AAABAAAAAAAeACAAAAABAAAAAAAfAP//AAABAAAAAAAfACAAAAABAAAAAAAgAP//AAABAAAAAAAgACAAAAABAAAAAAAhAP//AAABAAAAAAAhACAAAAABAAAAAAAiAP//AAABAAAAAAAiACAAAAABAAAAAAAjAP//AAABAAAAAAAjACAAAAABAAAAAAAkAP//AAABAAAAAAAkACAAAAABAAAAAAAlAP//AAABAAAAAAAlACAAAAABAAAAAAAmAP//AAABAAAAAAAmACAAAAABAAAAAAAnAP//AAABAAAAAAAnACAAAAABAAAAAAAoAP//AAABAAAAAAAoACAAAAABAAAAAAApAP//AAABAAAAAAApACAAAAABAAAAAAAqAP//AAABAAAAAAAqACAAAAABAAAAAAArAP//AAABAAAAAAArACAAAAABAAAAAAAsAP//AAABAAAAAAAsACAAAAABAAAAAAAtAP//AAABAAAAAAAtACAAAAABAAAAAAAuAP//AAABAAAAAAAuACAAAAABAAAAAAAvAP//AAABAAAAAAAvACAAAAABAAAAAAAwAP//AAABAAAAAAAwACAAAAABAAAAAAAxAP//AAABAAAAAAAxACAAAAABAAAAAAAyAP//AAABAAAAAAAyACAAAAABAAAAAAD//wAAAAABAAAAAAAyAAAAAAABAAAAAAD//wEAAAABAAAAAAAyAAEAAAABAAAAAAD//wIAAAABAAAAAAAyAAIAAAABAAAAAAD//wMAAAABAAAAAAAyAAMAAAABAAAAAAD//wQAAAABAAAAAAAyAAQAAAABAAAAAAD//wUAAAABAAAAAAAyAAUAAAABAAAAAAD//wYAAAABAAAAAAAyAAYAAAABAAAAAAD//wcAAAABAAAAAAAyAAcAAAABAAAAAAD//wgAAAABAAAAAAAyAAgAAAABAAAAAAD//wkAAAABAAAAAAAyAAkAAAABAAAAAAD//woAAAABAAAAAAAyAAoAAAABAAAAAAD//wsAAAABAAAAAAAyAAsAAAABAAAAAAD//wwAAAABAAAAAAAyAAwAAAABAAAAAAD//w0AAAABAAAAAAAyAA0AAAABAAAAAAD//w4AAAABAAAAAAAyAA4AAAABAAAAAAD//w8AAAABAAAAAAAyAA8AAAABAAAAAAD//xAAAAABAAAAAAAyABAAAAABAAAAAAD//xEAAAABAAAAAAAyABEAAAABAAAAAAD//xIAAAABAAAAAAAyABIAAAABAAAAAAD//xMAAAABAAAAAAAyABMAAAABAAAAAAD//xQAAAABAAAAAAAyABQAAAABAAAAAAD//xUAAAABAAAAAAAyABUAAAABAAAAAAD//xYAAAABAAAAAAAyABYAAAABAAAAAAD//xcAAAABAAAAAAAyABcAAAABAAAAAAD//xgAAAABAAAAAAAyABgAAAABAAAAAAD//xkAAAABAAAAAAAyABkAAAABAAAAAAD//xoAAAABAAAAAAAyABoAAAABAAAAAAD//xsAAAABAAAAAAAyABsAAAABAAAAAAD//xwAAAABAAAAAAAyABwAAAABAAAAAAD//x0AAAABAAAAAAAyAB0AAAABAAAAAAD//x4AAAABAAAAAAAyAB4AAAABAAAAAAD//x8AAAABAAAAAAAyAB8AAAABAAAAAAAgAAwAAAAAAAAAAAAlAAoAAAAAAAAAAAAmAA0AAAAAAAAAAAAlABUAAAAAAAAAAAAmABQAAAAAAAAAAAAmABcAAAAAAAAAAAAlABgAAAAAAAAAAAAAAAcAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAABABcAAAAAAAAAAAACAAEAAAAAAAAAAAADAA0AAAAAAAAAAAADABcAAAAAAAAAAAADAB4AAAAAAAAAAAAEABIAAAAAAAAAAAAEABMAAAAAAAAAAAAFAB4AAAAAAAAAAAAGAAEAAAAAAAAAAAAGABsAAAAAAAAAAAAGAB8AAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAQAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAYAAAAAAAAAAAAIABwAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAB4AAAAAAAAAAAAKABIAAAAAAAAAAAALAAwAAAAAAAAAAAALAA0AAAAAAAAAAAAMAAUAAAAAAAAAAAANAAoAAAAAAAAAAAANABgAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAcAAAAAAAAAAAAOABAAAAAAAAAAAAAPAAYAAAAAAAAAAAAQABwAAAAAAAAAAAARAA0AAAAAAAAAAAASAAgAAAAAAAAAAAATABUAAAAAAAAAAAATAB8AAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAUAAAAAAAAAAAAVAB8AAAAAAAAAAAAWAAEAAAAAAAAAAAAXAAgAAAAAAAAAAAAXAAoAAAAAAAAAAAAXAA8AAAAAAAAAAAAXABYAAAAAAAAAAAAXABsAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAQAAAAAAAAAAAAYAA8AAAAAAAAAAAAZABEAAAAAAAAAAAAZAB4AAAAAAAAAAAAaAAwAAAAAAAAAAAAbAAwAAAAAAAAAAAAbABgAAAAAAAAAAAAdAA4AAAAAAAAAAAAdABYAAAAAAAAAAAAdABkAAAAAAAAAAAAeABUAAAAAAAAAAAAfAAwAAAAAAAAAAAAfAA0AAAAAAAAAAAAfABoAAAAAAAAAAAAgAAYAAAAAAAAAAAAgABgAAAAAAAAAAAAiAAEAAAAAAAAAAAAiAAYAAAAAAAAAAAAlAAQAAAAAAAAAAAAlABwAAAAAAAAAAAAnAA8AAAAAAAAAAAAoAAQAAAAAAAAAAAApAB8AAAAAAAAAAAAqAAcAAAAAAAAAAAAqAAoAAAAAAAAAAAAqABYAAAAAAAAAAAArAAUAAAAAAAAAAAArAB4AAAAAAAAAAAAsAAcAAAAAAAAAAAAtAAAAAAAAAAAAAAAtAAcAAAAAAAAAAAAtABcAAAAAAAAAAAAuAAkAAAAAAAAAAAAxAAIAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAoAAAAAAAAAAAAAABIAAAAAAAAAAAAAABYAAAAAAAAAAAAAABgAAAAAAAAAAAAAABsAAAAAAAAAAAAAAB8AAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABABEAAAAAAAAAAAABABQAAAAAAAAAAAABABkAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAoAAAAAAAAAAAACABEAAAAAAAAAAAACABUAAAAAAAAAAAACABgAAAAAAAAAAAACABoAAAAAAAAAAAACABsAAAAAAAAAAAADAAgAAAAAAAAAAAADAB8AAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAsAAAAAAAAAAAAEABAAAAAAAAAAAAAEABcAAAAAAAAAAAAEABgAAAAAAAAAAAAEABkAAAAAAAAAAAAEABsAAAAAAAAAAAAEAB0AAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAwAAAAAAAAAAAAFABMAAAAAAAAAAAAFABsAAAAAAAAAAAAFABwAAAAAAAAAAAAFAB8AAAAAAAAAAAAGAAAAAAAAAAAAAAAGAA8AAAAAAAAAAAAGABUAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHABUAAAAAAAAAAAAHABcAAAAAAAAAAAAHABkAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAwAAAAAAAAAAAAIABAAAAAAAAAAAAAIABIAAAAAAAAAAAAIABoAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAA4AAAAAAAAAAAAJABEAAAAAAAAAAAAJABgAAAAAAAAAAAAJABkAAAAAAAAAAAAJABoAAAAAAAAAAAAJABsAAAAAAAAAAAAJABwAAAAAAAAAAAAJAB0AAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAAKABAAAAAAAAAAAAAKABMAAAAAAAAAAAAKABQAAAAAAAAAAAAKABUAAAAAAAAAAAAKABgAAAAAAAAAAAAKABkAAAAAAAAAAAAKABsAAAAAAAAAAAALAAAAAAAAAAAAAAALAAIAAAAAAAAAAAALAAYAAAAAAAAAAAALAAkAAAAAAAAAAAALABoAAAAAAAAAAAALAB8AAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMABEAAAAAAAAAAAAMABwAAAAAAAAAAAAMAB0AAAAAAAAAAAAMAB4AAAAAAAAAAAANAAYAAAAAAAAAAAANAAsAAAAAAAAAAAANABMAAAAAAAAAAAANABQAAAAAAAAAAAANABcAAAAAAAAAAAANABoAAAAAAAAAAAANAB0AAAAAAAAAAAANAB4AAAAAAAAAAAAOAAEAAAAAAAAAAAAOAA0AAAAAAAAAAAAPAAoAAAAAAAAAAAAPABEAAAAAAAAAAAAPABQAAAAAAAAAAAAPABYAAAAAAAAAAAAPABcAAAAAAAAAAAAPABwAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQABIAAAAAAAAAAAAQABMAAAAAAAAAAAAQABYAAAAAAAAAAAAQABsAAAAAAAAAAAARAAIAAAAAAAAAAAARABAAAAAAAAAAAAARAB0AAAAAAAAAAAARAB8AAAAAAAAAAAASAAAAAAAAAAAAAAASAAQAAAAAAAAAAAASAAcAAAAAAAAAAAASAAsAAAAAAAAAAAASAAwAAAAAAAAAAAASABIAAAAAAAAAAAATAAAAAAAAAAAAAAATAAIAAAAAAAAAAAATAAoAAAAAAAAAAAATAAsAAAAAAAAAAAATAAwAAAAAAAAAAAATABIAAAAAAAAAAAAUAAAAAAAAAAAAAAAUAAIAAAAAAAAAAAAUAAoAAAAAAAAAAAAUAAwAAAAAAAAAAAAUABQAAAAAAAAAAAAUABcAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAAVAAoAAAAAAAAAAAAVAA0AAAAAAAAAAAAVAA8AAAAAAAAAAAAVABAAAAAAAAAAAAAVABEAAAAAAAAAAAAVABQAAAAAAAAAAAAVABUAAAAAAAAAAAAVABcAAAAAAAAAAAAVABgAAAAAAAAAAAAVABkAAAAAAAAAAAAVABoAAAAAAAAAAAAWAAUAAAAAAAAAAAAWAAYAAAAAAAAAAAAWAAkAAAAAAAAAAAAWABEAAAAAAAAAAAAWABkAAAAAAAAAAAAWAB8AAAAAAAAAAAAXAAQAAAAAAAAAAAAXAA0AAAAAAAAAAAAXABgAAAAAAAAAAAAXABkAAAAAAAAAAAAXAB4AAAAAAAAAAAAYAAcAAAAAAAAAAAAYAAoAAAAAAAAAAAAYAAsAAAAAAAAAAAAYAAwAAAAAAAAAAAAYABAAAAAAAAAAAAAYABQAAAAAAAAAAAAYABUAAAAAAAAAAAAYABkAAAAAAAAAAAAYAB0AAAAAAAAAAAAZAAAAAAAAAAAAAAAZAAgAAAAAAAAAAAAZAA8AAAAAAAAAAAAZABAAAAAAAAAAAAAZABQAAAAAAAAAAAAZABcAAAAAAAAAAAAZABsAAAAAAAAAAAAZAB0AAAAAAAAAAAAZAB8AAAAAAAAAAAAaAAIAAAAAAAAAAAAaAAkAAAAAAAAAAAAaAA4AAAAAAAAAAAAaAA8AAAAAAAAAAAAaABQAAAAAAAAAAAAaABsAAAAAAAAAAAAaAB8AAAAAAAAAAAAbAAsAAAAAAAAAAAAbABIAAAAAAAAAAAAbABMAAAAAAAAAAAAbABcAAAAAAAAAAAAbABsAAAAAAAAAAAAbAB0AAAAAAAAAAAAcAAMAAAAAAAAAAAAcAAYAAAAAAAAAAAAcABcAAAAAAAAAAAAdAAUAAAAAAAAAAAAdAAoAAAAAAAAAAAAdAB4AAAAAAAAAAAAdAB8AAAAAAAAAAAAeAAUAAAAAAAAAAAAeAAgAAAAAAAAAAAAeABIAAAAAAAAAAAAfAAIAAAAAAAAAAAAfAAMAAAAAAAAAAAAfAAQAAAAAAAAAAAAfAAUAAAAAAAAAAAAfAAYAAAAAAAAAAAAfABIAAAAAAAAAAAAfABcAAAAAAAAAAAAfAB4AAAAAAAAAAAAfAB8AAAAAAAAAAAAgAAEAAAAAAAAAAAAgAAIAAAAAAAAAAAAgAAcAAAAAAAAAAAAgABAAAAAAAAAAAAAgABQAAAAAAAAAAAAgABYAAAAAAAAAAAAgABoAAAAAAAAAAAAgABsAAAAAAAAAAAAhAAUAAAAAAAAAAAAhAA8AAAAAAAAAAAAhABQAAAAAAAAAAAAhABcAAAAAAAAAAAAhABgAAAAAAAAAAAAhABoAAAAAAAAAAAAhAB4AAAAAAAAAAAAiAAIAAAAAAAAAAAAiAAsAAAAAAAAAAAAiAA0AAAAAAAAAAAAiABoAAAAAAAAAAAAjAAAAAAAAAAAAAAAjAAgAAAAAAAAAAAAjABEAAAAAAAAAAAAjABMAAAAAAAAAAAAjABYAAAAAAAAAAAAjABgAAAAAAAAAAAAjABoAAAAAAAAAAAAjAB4AAAAAAAAAAAAjAB8AAAAAAAAAAAAkAAAAAAAAAAAAAAAkAAoAAAAAAAAAAAAkABgAAAAAAAAAAAAkAB0AAAAAAAAAAAAlAAYAAAAAAAAAAAAlAAcAAAAAAAAAAAAlABkAAAAAAAAAAAAlABsAAAAAAAAAAAAmAAMAAAAAAAAAAAAmAAQAAAAAAAAAAAAmAAUAAAAAAAAAAAAmAAgAAAAAAAAAAAAmAAsAAAAAAAAAAAAmAAwAAAAAAAAAAAAmABEAAAAAAAAAAAAmABIAAAAAAAAAAAAnAAEAAAAAAAAAAAAnAAMAAAAAAAAAAAAnAAYAAAAAAAAAAAAnAA0AAAAAAAAAAAAnABEAAAAAAAAAAAAnABQAAAAAAAAAAAAnABkAAAAAAAAAAAAoAAEAAAAAAAAAAAAoAAMAAAAAAAAAAAAoAAcAAAAAAAAAAAAoAAkAAAAAAAAAAAAoABAAAAAAAAAAAAAoAB4AAAAAAAAAAAApAAAAAAAAAAAAAAApAAUAAAAAAAAAAAApAAYAAAAAAAAAAAApAAkAAAAAAAAAAAApABAAAAAAAAAAAAAqAAAAAAAAAAAAAAAqAA4AAAAAAAAAAAAqABQAAAAAAAAAAAAqABUAAAAAAAAAAAAqAB4AAAAAAAAAAAArAAIAAAAAAAAAAAArABMAAAAAAAAAAAArABYAAAAAAAAAAAArABgAAAAAAAAAAAArABkAAAAAAAAAAAArABoAAAAAAAAAAAArABwAAAAAAAAAAAAsAAYAAAAAAAAAAAAsAAgAAAAAAAAAAAAsAA0AAAAAAAAAAAAsAA4AAAAAAAAAAAAsAA8AAAAAAAAAAAAsABQAAAAAAAAAAAAsABYAAAAAAAAAAAAsABgAAAAAAAAAAAAsAB4AAAAAAAAAAAAtAAYAAAAAAAAAAAAtAAwAAAAAAAAAAAAtAA8AAAAAAAAAAAAtABEAAAAAAAAAAAAtABUAAAAAAAAAAAAtABYAAAAAAAAAAAAtABgAAAAAAAAAAAAtABoAAAAAAAAAAAAtABsAAAAAAAAAAAAtAB4AAAAAAAAAAAAtAB8AAAAAAAAAAAAuAAoAAAAAAAAAAAAuABEAAAAAAAAAAAAuAB4AAAAAAAAAAAAvAAIAAAAAAAAAAAAvAAUAAAAAAAAAAAAvAAoAAAAAAAAAAAAvAAsAAAAAAAAAAAAvAA8AAAAAAAAAAAAvABMAAAAAAAAAAAAvABUAAAAAAAAAAAAvABYAAAAAAAAAAAAvAB4AAAAAAAAAAAAwAAMAAAAAAAAAAAAwAAkAAAAAAAAAAAAwAA8AAAAAAAAAAAAwABUAAAAAAAAAAAAwABcAAAAAAAAAAAAwABwAAAAAAAAAAAAxAAMAAAAAAAAAAAAxAAkAAAAAAAAAAAAxAA4AAAAAAAAAAAAxABQAAAAAAAAAAAAxABUAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_bdnrh")

[node name="BackgroundButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WorldTime" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="button_down" from="BackgroundButton" to="." method="_on_background_button_button_down"]
[connection signal="button_up" from="BackgroundButton" to="." method="_on_background_button_button_up"]
[connection signal="timeout" from="WorldTime" to="." method="_on_world_time_timeout"]
